--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="todo at the speed of thought">
 		<link rel="icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-		<link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+		<link rel="mask-icon" href="/mask-icon.svg" color="#ffffff">
 		<meta name="theme-color" content="#ffffff">
 	</head>
 	<body>
